# PS5_controller_scripts_AI_CAM

./: CMakeLists.txt  README.md  SETUP.txt  package_release.bat  setup_dependencies.bat
.claude/: settings.local.json
include/: Application.h  Common.h  ConfigManager.h  DualSenseController.h  GUI.h  HotkeyManager.h  InputProcessor.h  Overlay.h  ScriptEngine.h  ScriptManager.h  VirtualController.h
libs/imgui/: imconfig.h
scripts/: README.txt  _template.lua  aim_assist.lua  anti_recoil.lua  auto_sprint.lua  deadzone.lua  rapid_fire.lua
src/: Application.cpp  ConfigManager.cpp  DualSenseController.cpp  GUI.cpp  HotkeyManager.cpp  InputProcessor.cpp  Overlay.cpp  ScriptEngine.cpp  ScriptManager.cpp  VirtualController.cpp  main.cpp
